--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="summer_2020_term_time">05/21 – 08/14</string>
     <string name="fall_2020_term_time">09/02 – 12/21</string>
     <string name="select">Select</string>
+    <string name="drop">Drop</string>
     <string name="adult_learning_and_leadership">Adult Learning and Leadership</string>
     <string name="orld">ORLD</string>
     <string name="human_cognition_and_learning">Human Cognition and Learning</string>
